// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompressionPlugin should run plugin against assets added later by plugins: assets 1`] = `
Array [
  Array [
    "main.js",
    1843,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 1843,
    },
  ],
  Array [
    "main.js.gz",
    584,
    Object {
      "compressed": true,
      "size": 584,
    },
  ],
  Array [
    "newFile.js",
    23,
    Object {
      "related": Object {
        "gzipped": "newFile.js.gz",
      },
      "size": 23,
    },
  ],
  Array [
    "newFile.js.gz",
    43,
    Object {
      "compressed": true,
      "size": 43,
    },
  ],
]
`;

exports[`CompressionPlugin should run plugin against assets added later by plugins: errors 1`] = `Array []`;

exports[`CompressionPlugin should run plugin against assets added later by plugins: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": assets 1`] = `
Array [
  Array [
    "async.async.js",
    194,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.js.gz",
    134,
    Object {
      "compressed": true,
      "size": 134,
    },
  ],
  Array [
    "icon.png",
    78117,
    Object {
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "icon.svg",
    672,
    Object {
      "related": Object {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "icon.svg.gz",
    393,
    Object {
      "compressed": true,
      "size": 393,
    },
  ],
  Array [
    "main.js",
    15854,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 15854,
    },
  ],
  Array [
    "main.js.gz",
    3882,
    Object {
      "compressed": true,
      "size": 3882,
    },
  ],
]
`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": assets 2`] = `
Array [
  Array [
    "async.async.js",
    194,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.js.gz",
    134,
    Object {
      "compressed": true,
      "size": 134,
    },
  ],
  Array [
    "icon.png",
    78117,
    Object {
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "icon.svg",
    672,
    Object {
      "related": Object {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "icon.svg.gz",
    393,
    Object {
      "compressed": true,
      "size": 393,
    },
  ],
  Array [
    "main.js",
    15854,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 15854,
    },
  ],
  Array [
    "main.js.gz",
    3882,
    Object {
      "compressed": true,
      "size": 3882,
    },
  ],
]
`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": errors 1`] = `Array []`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": errors 2`] = `Array []`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": warnings 2`] = `Array []`;

exports[`CompressionPlugin should work and keep assets info: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.cd3aed5809a2faa4eb5a.js",
    194,
    Object {
      "contenthash": "cd3aed5809a2faa4eb5a",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.cd3aed5809a2faa4eb5a.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.cd3aed5809a2faa4eb5a.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "main.275f272c4329a1c38718.js",
    15941,
    Object {
      "contenthash": "275f272c4329a1c38718",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.275f272c4329a1c38718.js.gz",
      },
      "size": 15941,
    },
  ],
  Array [
    "main.275f272c4329a1c38718.js.gz",
    3967,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3967,
    },
  ],
]
`;

exports[`CompressionPlugin should work and keep assets info: errors 1`] = `Array []`;

exports[`CompressionPlugin should work and keep assets info: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and show compress assets in stats: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.js",
    194,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.js.gz",
    134,
    Object {
      "compressed": true,
      "size": 134,
    },
  ],
  Array [
    "main.js",
    15910,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 15910,
    },
  ],
  Array [
    "main.js.gz",
    3946,
    Object {
      "compressed": true,
      "size": 3946,
    },
  ],
]
`;

exports[`CompressionPlugin should work and show compress assets in stats: errors 1`] = `Array []`;

exports[`CompressionPlugin should work and show compress assets in stats: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: assets 1`] = `
Array [
  Array [
    "async.js",
    194,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.js.gz",
    134,
    Object {
      "compressed": true,
      "size": 134,
    },
  ],
  Array [
    "icon.png",
    78117,
    Object {
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "icon.svg",
    672,
    Object {
      "related": Object {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "icon.svg.gz",
    393,
    Object {
      "compressed": true,
      "size": 393,
    },
  ],
  Array [
    "main.js",
    15838,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 15838,
    },
  ],
  Array [
    "main.js.gz",
    3879,
    Object {
      "compressed": true,
      "size": 3879,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: assets 2`] = `
Array [
  Array [
    "async.js",
    194,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.js.gz",
    134,
    Object {
      "compressed": true,
      "size": 134,
    },
  ],
  Array [
    "icon.png",
    94117,
    Object {
      "related": Object {
        "gzipped": "icon.png.gz",
      },
      "size": 94117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "icon.png.gz",
    73309,
    Object {
      "compressed": true,
      "size": 73309,
    },
  ],
  Array [
    "icon.svg",
    672,
    Object {
      "related": Object {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "icon.svg.gz",
    393,
    Object {
      "compressed": true,
      "size": 393,
    },
  ],
  Array [
    "main.js",
    15838,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 15838,
    },
  ],
  Array [
    "main.js.gz",
    3879,
    Object {
      "compressed": true,
      "size": 3879,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: errors 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: errors 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: warnings 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.js",
    194,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.js.gz",
    134,
    Object {
      "compressed": true,
      "size": 134,
    },
  ],
  Array [
    "main.js",
    15894,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 15894,
    },
  ],
  Array [
    "main.js.gz",
    3943,
    Object {
      "compressed": true,
      "size": 3943,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: assets 2`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.js",
    194,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.js.gz",
    134,
    Object {
      "compressed": true,
      "size": 134,
    },
  ],
  Array [
    "main.js",
    15931,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 15931,
    },
  ],
  Array [
    "main.js.gz",
    3968,
    Object {
      "compressed": true,
      "size": 3968,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: errors 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: errors 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: warnings 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "customed": "09a1a1112c577c2794359715edfcb5ac.png.custom",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.custom",
    78117,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
        "customed": "23fc1d3ac606d117e05a140e0de79806.svg.custom",
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.custom",
    672,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.js",
    194,
    Object {
      "javascriptModule": false,
      "related": Object {
        "brotliCompressed": "async.js.br",
        "customed": "async.js.custom",
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.js.br",
    123,
    Object {
      "compressed": true,
      "size": 123,
    },
  ],
  Array [
    "async.js.custom",
    194,
    Object {
      "compressed": true,
      "size": 194,
    },
  ],
  Array [
    "async.js.gz",
    134,
    Object {
      "compressed": true,
      "size": 134,
    },
  ],
  Array [
    "main.js",
    15894,
    Object {
      "javascriptModule": false,
      "related": Object {
        "brotliCompressed": "main.js.br",
        "customed": "main.js.custom",
        "gzipped": "main.js.gz",
      },
      "size": 15894,
    },
  ],
  Array [
    "main.js.br",
    3453,
    Object {
      "compressed": true,
      "size": 3453,
    },
  ],
  Array [
    "main.js.custom",
    15894,
    Object {
      "compressed": true,
      "size": 15894,
    },
  ],
  Array [
    "main.js.gz",
    3943,
    Object {
      "compressed": true,
      "size": 3943,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: assets 2`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "customed": "09a1a1112c577c2794359715edfcb5ac.png.custom",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.custom",
    78117,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
        "customed": "23fc1d3ac606d117e05a140e0de79806.svg.custom",
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.custom",
    672,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.js",
    194,
    Object {
      "javascriptModule": false,
      "related": Object {
        "brotliCompressed": "async.js.br",
        "customed": "async.js.custom",
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.js.br",
    123,
    Object {
      "compressed": true,
      "size": 123,
    },
  ],
  Array [
    "async.js.custom",
    194,
    Object {
      "compressed": true,
      "size": 194,
    },
  ],
  Array [
    "async.js.gz",
    134,
    Object {
      "compressed": true,
      "size": 134,
    },
  ],
  Array [
    "main.js",
    15894,
    Object {
      "javascriptModule": false,
      "related": Object {
        "brotliCompressed": "main.js.br",
        "customed": "main.js.custom",
        "gzipped": "main.js.gz",
      },
      "size": 15894,
    },
  ],
  Array [
    "main.js.br",
    3453,
    Object {
      "compressed": true,
      "size": 3453,
    },
  ],
  Array [
    "main.js.custom",
    15894,
    Object {
      "compressed": true,
      "size": 15894,
    },
  ],
  Array [
    "main.js.gz",
    3943,
    Object {
      "compressed": true,
      "size": 3943,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: errors 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: errors 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: warnings 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.js",
    194,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.js.gz",
    134,
    Object {
      "compressed": true,
      "size": 134,
    },
  ],
  Array [
    "main.js",
    15894,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 15894,
    },
  ],
  Array [
    "main.js.gz",
    3943,
    Object {
      "compressed": true,
      "size": 3943,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": assets 2`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.js",
    194,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.js.gz",
    134,
    Object {
      "compressed": true,
      "size": 134,
    },
  ],
  Array [
    "main.js",
    15894,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 15894,
    },
  ],
  Array [
    "main.js.gz",
    3943,
    Object {
      "compressed": true,
      "size": 3943,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": errors 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": errors 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": warnings 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.e980c9135ae44da27275.js",
    194,
    Object {
      "chunkhash": "e980c9135ae44da27275",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.e980c9135ae44da27275.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.e980c9135ae44da27275.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "main.c62ff7c158d70f922396.js",
    15941,
    Object {
      "chunkhash": "c62ff7c158d70f922396",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.c62ff7c158d70f922396.js.gz",
      },
      "size": 15941,
    },
  ],
  Array [
    "main.c62ff7c158d70f922396.js.gz",
    3970,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3970,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: assets 2`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.e980c9135ae44da27275.js",
    194,
    Object {
      "chunkhash": "e980c9135ae44da27275",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.e980c9135ae44da27275.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.e980c9135ae44da27275.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "main.c62ff7c158d70f922396.js",
    15941,
    Object {
      "chunkhash": "c62ff7c158d70f922396",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.c62ff7c158d70f922396.js.gz",
      },
      "size": 15941,
    },
  ],
  Array [
    "main.c62ff7c158d70f922396.js.gz",
    3970,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3970,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: errors 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: errors 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: warnings 2`] = `Array []`;

exports[`CompressionPlugin should work child compilations: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "async.async.js?ver=650bf2b8354ba56e6e3f",
    194,
    Object {
      "fullhash": "650bf2b8354ba56e6e3f",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "copied.js",
    400,
    Object {
      "copied": true,
      "related": Object {
        "gzipped": "copied.js.gz",
      },
      "size": 400,
    },
  ],
  Array [
    "copied.js.gz",
    29,
    Object {
      "compressed": true,
      "size": 29,
    },
  ],
  Array [
    "main.js.gz",
    3992,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3992,
    },
  ],
  Array [
    "main.js?var=650bf2b8354ba56e6e3f",
    16099,
    Object {
      "fullhash": "650bf2b8354ba56e6e3f",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 16099,
    },
  ],
]
`;

exports[`CompressionPlugin should work child compilations: errors 1`] = `Array []`;

exports[`CompressionPlugin should work child compilations: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work with 'webpack-stats-plugin': assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.e980c9135ae44da27275.js",
    194,
    Object {
      "chunkhash": "e980c9135ae44da27275",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.e980c9135ae44da27275.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.e980c9135ae44da27275.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "main.c62ff7c158d70f922396.js",
    15941,
    Object {
      "chunkhash": "c62ff7c158d70f922396",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.c62ff7c158d70f922396.js.gz",
      },
      "size": 15941,
    },
  ],
  Array [
    "main.c62ff7c158d70f922396.js.gz",
    3970,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3970,
    },
  ],
  Array [
    "stats.json",
    155,
    Object {
      "size": 155,
    },
  ],
]
`;

exports[`CompressionPlugin should work with 'webpack-stats-plugin': errors 1`] = `Array []`;

exports[`CompressionPlugin should work with 'webpack-stats-plugin': warnings 1`] = `Array []`;

exports[`CompressionPlugin should work with assets info: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "async.async.js?ver=aba4188fcd929f017758",
    194,
    Object {
      "fullhash": "aba4188fcd929f017758",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "copied.js",
    400,
    Object {
      "copied": true,
      "related": Object {
        "gzipped": "copied.js.gz",
      },
      "size": 400,
    },
  ],
  Array [
    "copied.js.gz",
    29,
    Object {
      "compressed": true,
      "size": 29,
    },
  ],
  Array [
    "main.js.gz",
    4027,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4027,
    },
  ],
  Array [
    "main.js.map.gz",
    4119,
    Object {
      "compressed": true,
      "size": 4119,
    },
  ],
  Array [
    "main.js.map?var=aba4188fcd929f017758",
    13045,
    Object {
      "development": true,
      "related": Object {
        "gzipped": "main.js.map.gz",
      },
      "size": 13045,
    },
  ],
  Array [
    "main.js?var=aba4188fcd929f017758",
    16160,
    Object {
      "fullhash": "aba4188fcd929f017758",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
        "sourceMap": "main.js.map?var=aba4188fcd929f017758",
      },
      "size": 16160,
    },
  ],
]
`;

exports[`CompressionPlugin should work with assets info: errors 1`] = `Array []`;

exports[`CompressionPlugin should work with assets info: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work with multiple plugins and using same filename and keep source maps: assets 1`] = `
Array [
  Array [
    "/br/09a1a1112c577c2794359715edfcb5ac.png",
    73329,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73329,
    },
  ],
  Array [
    "/br/23fc1d3ac606d117e05a140e0de79806.svg",
    363,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  Array [
    "/br/async.async.js",
    123,
    Object {
      "compressed": true,
      "size": 123,
    },
  ],
  Array [
    "/br/main.js",
    3465,
    Object {
      "compressed": true,
      "size": 3465,
    },
  ],
  Array [
    "/br/main.js.map",
    3578,
    Object {
      "compressed": true,
      "size": 3578,
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.js",
    134,
    Object {
      "compressed": true,
      "size": 134,
    },
  ],
  Array [
    "main.js",
    3969,
    Object {
      "compressed": true,
      "size": 3969,
    },
  ],
  Array [
    "main.js.map",
    4062,
    Object {
      "compressed": true,
      "size": 4062,
    },
  ],
]
`;

exports[`CompressionPlugin should work with multiple plugins and using same filename and keep source maps: errors 1`] = `Array []`;

exports[`CompressionPlugin should work with multiple plugins and using same filename and keep source maps: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work with multiple plugins and using same filename: assets 1`] = `
Array [
  Array [
    "/br/09a1a1112c577c2794359715edfcb5ac.png",
    73329,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73329,
    },
  ],
  Array [
    "/br/23fc1d3ac606d117e05a140e0de79806.svg",
    363,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  Array [
    "/br/async.async.js",
    123,
    Object {
      "compressed": true,
      "size": 123,
    },
  ],
  Array [
    "/br/main.js",
    3442,
    Object {
      "compressed": true,
      "size": 3442,
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.js",
    134,
    Object {
      "compressed": true,
      "size": 134,
    },
  ],
  Array [
    "main.js",
    3946,
    Object {
      "compressed": true,
      "size": 3946,
    },
  ],
]
`;

exports[`CompressionPlugin should work with multiple plugins and using same filename: errors 1`] = `Array []`;

exports[`CompressionPlugin should work with multiple plugins and using same filename: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work with multiple plugins: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "compressed": "09a1a1112c577c2794359715edfcb5ac.png.compress",
        "customed": "09a1a1112c577c2794359715edfcb5ac.png.custom?foo=bar#hash",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.compress",
    78117,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.custom?foo=bar#hash",
    78117,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
        "compressed": "23fc1d3ac606d117e05a140e0de79806.svg.compress",
        "customed": "23fc1d3ac606d117e05a140e0de79806.svg.custom?foo=bar#hash",
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.compress",
    672,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.custom?foo=bar#hash",
    672,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.js.br",
    123,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 123,
    },
  ],
  Array [
    "async.async.js.compress",
    194,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 194,
    },
  ],
  Array [
    "async.async.js.custom?foo=bar#hash",
    194,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 194,
    },
  ],
  Array [
    "async.async.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "async.async.js?ver=e2c5a370fd2d5b65b50b",
    194,
    Object {
      "fullhash": "e2c5a370fd2d5b65b50b",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "brotliCompressed": "async.async.js.br",
        "compressed": "async.async.js.compress",
        "customed": "async.async.js.custom?foo=bar#hash",
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "main.js.br",
    3492,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3492,
    },
  ],
  Array [
    "main.js.compress",
    16102,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 16102,
    },
  ],
  Array [
    "main.js.custom?foo=bar#hash",
    16102,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 16102,
    },
  ],
  Array [
    "main.js.gz",
    3996,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3996,
    },
  ],
  Array [
    "main.js?var=e2c5a370fd2d5b65b50b",
    16102,
    Object {
      "fullhash": "e2c5a370fd2d5b65b50b",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "brotliCompressed": "main.js.br",
        "compressed": "main.js.compress",
        "customed": "main.js.custom?foo=bar#hash",
        "gzipped": "main.js.gz",
      },
      "size": 16102,
    },
  ],
]
`;

exports[`CompressionPlugin should work with multiple plugins: errors 1`] = `Array []`;

exports[`CompressionPlugin should work with multiple plugins: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "async.async.js?ver=e2c5a370fd2d5b65b50b",
    194,
    Object {
      "fullhash": "e2c5a370fd2d5b65b50b",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "main.js.gz",
    3996,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3996,
    },
  ],
  Array [
    "main.js?var=e2c5a370fd2d5b65b50b",
    16102,
    Object {
      "fullhash": "e2c5a370fd2d5b65b50b",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 16102,
    },
  ],
]
`;

exports[`CompressionPlugin should work: errors 1`] = `Array []`;

exports[`CompressionPlugin should work: warnings 1`] = `Array []`;
